Fix overflow property

--- a/src/orb/index.css
+++ b/src/orb/index.css
@@ -14,6 +14,10 @@
 .OrbGrid-cell-header {
 }
 
+.ReactVirtualized__Grid__innerScrollContainer {
+  overflow: hidden;
+}
+
 @keyframes anim-info-updated {
     0% {
       background-color: red;
